fix overflow + add comments

--- a/algo-lens-react/src/App.css
+++ b/algo-lens-react/src/App.css
@@ -2,40 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* General Styles */
 button {
   background: linear-gradient(45deg, #6a11cb, #2575fc); /* Edgy gradient */
   color: white;
@@ -71,6 +39,8 @@ button:disabled {
   opacity: 0.6; /* Slightly transparent */
 }
 
+
+/* Settings Styles */
 .settings-container {
   position: fixed;
   top: 0;
@@ -170,10 +140,11 @@ button:disabled {
   vertical-align: middle;
 }
 
+/* Sorting Styles */
 .sorting-visualization {
   justify-items: center;
   align-content: center;
-  width: 100vw;
+  max-width: 100vw;
   padding: 20px 0px;
 }
 
@@ -182,7 +153,7 @@ button:disabled {
   gap: 3px;
   align-items: end;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   height: 75vh;
 }
 
@@ -207,12 +178,14 @@ button:disabled {
   background-color: orange;
 }
 
+
+/* Pathfinding Styles */
 .grid {
   margin: auto;
   display: grid;
   gap: 1px;
   width: fit-content;
-  border:black solid 1px;
+  border: black solid 1px;
   background-color: black;
 }
 .row {
@@ -220,24 +193,22 @@ button:disabled {
   gap: 1px;
 }
 .cell {
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   background-color: black;
 }
 .cell.white {
   background-color: white;
 }
 
-
-.starting-point{
+.starting-point {
   background-color: yellow;
   content: "1";
 }
-.ending-point{
+.ending-point {
   background-color: blue;
   content: "2";
 }
-
 
 .enqueued-cell {
   background-color: green;
@@ -245,6 +216,6 @@ button:disabled {
 .visited-cell {
   background-color: cyan;
 }
-.path-cell{
+.path-cell {
   background-color: red;
 }
